- express + koa + vue

--- a/etc/nginx/site.conf
+++ b/etc/nginx/site.conf
@@ -6,9 +6,11 @@ server {
     access_log /var/log/nginx/access.log;
     root /var/www/public;
 
-    if (!-d $request_filename) {
-        rewrite     ^/(.+)/$ /$1 permanent;
-    }
+    gzip on;
+    gzip_types      text/plain text/css application/xml application/javascript;
+    gzip_proxied    no-cache no-store private expired auth;
+    gzip_min_length 1000;
+    client_max_body_size 25m;
 
     location / {
         if ($request_method = 'OPTIONS') {
@@ -26,7 +28,7 @@ server {
 
         proxy_set_header X-Real-IP $remote_addr;
         proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
-        proxy_pass http://backend:3000/;
+        proxy_pass http://backend:3000;
         proxy_set_header Host $http_host;
         proxy_redirect off;
     }
