--- a/backend/package.json
+++ b/backend/package.json
@@ -9,15 +9,16 @@
   },
   "repository": {
     "type": "git",
-    "url": "git+https://github.com/workaholicsClub/hrello.git"
+    "url": "git+https://github.com/lup-/jobbo.git"
   },
   "author": "Alexander Pavlov <lup.mail@gmail.com>",
   "license": "MIT",
   "bugs": {
-    "url": "https://github.com/workaholicsClub/hrello/issues"
+    "url": "https://github.com/lup-/jobbo/issues"
   },
-  "homepage": "https://github.com/workaholicsClub/hrello#readme",
+  "homepage": "https://github.com/lup-/jobbo#readme",
   "dependencies": {
-    "express": "^4.17.1"
+    "@koa/router": "^9.4.0",
+    "koa": "^2.13.0"
   }
 }
