--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -3,37 +3,35 @@ version: "3"
 services:
   nginx:
     image: nginx
-    container_name: 'nginx'
+    container_name: 'jobbo_nginx'
     ports:
-      - 8080:80
+      - ${PORT}:80
     volumes:
-      - "./public:/var/www/public"
-      - "./etc/nginx/site.conf:/etc/nginx/conf.d/default.conf"
+      - ./frontend/dist:/var/www/public
+      - ./etc/nginx/site.conf:/etc/nginx/conf.d/default.conf
     depends_on:
       - backend
 
   backend:
     image: node
-    container_name: 'backend'
+    container_name: 'jobbo_backend'
     ports:
       - 3000:3000
     depends_on:
       - mongo
-    env_file: ./dot.env
     volumes:
       - ./backend:/var/www
     working_dir: /var/www
     environment:
       - NODE_ENV=development
-      - MONGO_HOST=mongo
-      - MONGO_DB=hrello
-    command: npm start
+      - MONGO_HOST=jobbo_mongo
+      - MONGO_DB=jobbo
+    command: npm run start
 
   mongo:
     image: mongo
-    container_name: 'mongo'
+    container_name: 'jobbo_mongo'
     volumes:
       - ./etc/database:/data/db
-    restart: always
     ports:
-      - "27017:27017"
+      - ${MONGO_PORT}:27017
