--- a/backend/package.json
+++ b/backend/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "hrello",
+  "name": "backend",
   "version": "1.0.0",
   "description": "",
   "main": "server.js",
@@ -18,7 +18,11 @@
   },
   "homepage": "https://github.com/lup-/jobbo#readme",
   "dependencies": {
-    "@koa/router": "^9.4.0",
-    "koa": "^2.13.0"
+    "@koa/router": "^10.0.0",
+    "koa": "^2.13.0",
+    "koa-bodyparser": "^4.3.0",
+    "shortid": "^2.2.16",
+    "moment": "^2.29.1",
+    "mongodb": "^3.6.3"
   }
 }
