--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -3,9 +3,8 @@ version: "3"
 services:
   nginx:
     image: nginx
-    container_name: 'jobbo_nginx'
     ports:
-      - ${PORT}:80
+      - ${HTTP_PORT}:80
     volumes:
       - ./frontend/dist:/var/www/public
       - ./etc/nginx/site.conf:/etc/nginx/conf.d/default.conf
@@ -14,7 +13,6 @@ services:
 
   backend:
     image: node
-    container_name: 'jobbo_backend'
     ports:
       - 3000:3000
     depends_on:
@@ -24,13 +22,13 @@ services:
     working_dir: /var/www
     environment:
       - NODE_ENV=development
-      - MONGO_HOST=jobbo_mongo
-      - MONGO_DB=jobbo
+      - MONGO_HOST=cv_mongo
+      - MONGO_DB=cv
     command: npm run start
 
   mongo:
     image: mongo
-    container_name: 'jobbo_mongo'
+    container_name: 'cv_mongo'
     volumes:
       - ./etc/database:/data/db
     ports:
